<resources>
    <string name="app_name">My Movie DB</string>
    <string name="description">description</string>
    <string name="name">name</string>
    <string name="release_date">release_date</string>
    <string name="rating">rating</string>
    <string name="movie_image">movie_image</string>
    <string name="SearchMovie">search_hint</string>
    <string name="Search">Search</string>
    <string name="search">Search</string>
    <string name="enter_movie_name">Enter movie name</string>
</resources>